# sage

./: .gitignore  .replit  README.md  READMEx.md  TODO.md  examples_api.txt  examples_cli.txt  index.html  main.py  package-lock.json  package.json  prd.md  pyproject.toml  replit.nix  secrets.yaml  sender.yaml  senders.yaml  tailwind.config.js  yaml_catalogos_spec.md  yaml_overview.md  yaml_paquete_spec.md  yaml_sender_spec.md
attached_assets/: catalog.yaml  package.yaml  todo.md
catalogs/: inventory.yaml
config/secrets/: database.yaml  email.yaml  sftp.yaml
data/: README.md  sample.csv
public/: index.html
sage/: __init__.py
sage/api/: __init__.py  app.py  run.py
sage/cli/: __init__.py  main.py
sage/core/: README.md  __init__.py  ejemplos_custom.py  local_logger.py  notifications.py  processor.py  validation_utils.py  validator.py  yaml_loader.py
sage/processors/: package_processor.py  sender_processor.py  yaml_processor.py
sage/schemas/: __init__.py  catalog.py  package.py  sender.py
sage/utils/: __init__.py  exceptions.py  logger.py  secrets.py
src/: App.tsx  __init__.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: MainNav.tsx
src/services/: __init__.py  api.py  data_processor.py  scheduler.py  yaml_processor.py
tests/: create_test_zip.py  ejemplos_validacion.py  generate_test_data.py  run_processor_tests.py  test_api.sh  test_processor.py  test_validation_cases.py  test_yaml_validator.py  test_zip_excel.py  validate_productos.py  validate_zip_excel.py
tests/test_data/: customers.csv  sales.csv  test_package.yaml  (+2 more)
(+77 files in other folders)
